--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,7 @@ body {
 
 .navbar-brand {
   font-size: 1.5rem;
-  color: #fff;
+  color: #000;
   text-decoration: none;
 }
 
@@ -45,7 +45,7 @@ body {
 }
 
 .nav-link {
-  color: #fff;
+  color: #1b1b1b;
   text-decoration: none;
   font-size: 1.2rem;
   padding: 5px 10px;
